# inventopy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: static-analysis.yaml
docs/: inventopy.drawio
src/inventopy/: __main__.py
tests/unit/: test_cli.py
