[metadata]
name = inventopy
version = 0.0.1
author = aka-raccoon
author_email = Aka at aka
home_page = https://github.com/aka-raccoon/inventopy
description =  Python store inventory app
long_description = file: README.md
long_description_content_type = text/markdown
platform = ['linux', 'windows']
keywords = ['inventory']
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
python_requires = >= 3.7
install_requires =
    fastapi==0.70.0
    importlib-metadata==3.7.0
    pydantic==1.8.2
    rich==10.15.2
    typer==0.3.2

[options.extras_require]
test =
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-mock==3.6.1
dev =
    bandit==1.7.1
    black==21.11b1
    commitizen==2.20.0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.910
    pre_commit==2.16.0
    pylint==2.11.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    inventopy = inventopy.__main__:app
